[#1-ADD] Shabnam font

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "styles/fonts";
 
+body {
+  font-family: 'Shabnam', sans-serif;
+}
