[#3-ADD] Header component

--- a/src/app/HomeNewUserPage/components/home-new-user/home-new-user.component.html
+++ b/src/app/HomeNewUserPage/components/home-new-user/home-new-user.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-20">
-  <div>این هدر است</div>
+  <app-header></app-header>
   <div>سقفینو چگونه به شما کمک می کند</div>
   <div>دسته بندی</div>
   <div>ویژگی ها</div>
