[#3-UPDATE] header component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,12 @@
 <div class="relative">
   <img class="w-full h-auto" src="assets/photos/header.png" alt="headerphoto" />
-  <div class=" absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
-  <h1 class="absolute inset-0 flex items-center justify-center text-center text-display-1 text-neutral-gray3 bottom-20">
+  <div class=" absolute inset-0 bg-gradient-to-b from-neutral-700 to-transparent"></div>
+  <div class="absolute inset-0 items-center justify-center text-center text-neutral-gray3 flex flex-col gap-5">
+    <h1 class=" text-display-2  bottom-20">
     سقفینو؛ سقفی برای همه
-  </h1>
+    </h1>
+    <h2>آسانی و سرعت در پیدا کردن یک سقف تازه را در سقفینو تجربه کنید</h2>
+  </div>
+
 
 </div>
