--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,25 @@
-<div class="relative">
-  <img class="w-full h-auto" src="assets/photos/header.png" alt="headerphoto" />
-  <div class=" absolute inset-0 bg-gradient-to-b from-neutral-700 to-transparent"></div>
-  <div class="absolute inset-0 items-center justify-center text-center text-neutral-gray3 flex flex-col gap-5">
+<!--<div class="relative">-->
+<!--  <app-navbar></app-navbar>-->
+<!--  <img class="w-full h-auto" src="assets/photos/header.png" alt="headerphoto" />-->
+<!--  <div class=" absolute inset-0 bg-gradient-to-b from-neutral-700 to-transparent"></div>-->
+<!--  <div class="absolute inset-0 items-center justify-center text-center text-neutral-gray3 flex flex-col gap-5">-->
+<!--    <h1 class=" text-display-2  bottom-20">-->
+<!--    سقفینو؛ سقفی برای همه-->
+<!--    </h1>-->
+<!--    <h2>آسانی و سرعت در پیدا کردن یک سقف تازه را در سقفینو تجربه کنید</h2>-->
+<!--  </div>-->
+
+
+<!--</div>-->
+
+<div class="flex flex-col gap-20 p-10 bg-center bg-cover main-div w-full h-full">
+  <app-navbar></app-navbar>
+  <div class=" inset-0 items-center justify-center text-center text-neutral-gray3 flex flex-col gap-5">
     <h1 class=" text-display-2  bottom-20">
-    سقفینو؛ سقفی برای همه
+      سقفینو؛ سقفی برای همه
     </h1>
     <h2>آسانی و سرعت در پیدا کردن یک سقف تازه را در سقفینو تجربه کنید</h2>
   </div>
-
+  <div>این برای سرچ است</div>
 
 </div>
