[#4-UPDATE] Navbar component

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,31 @@
-<p>navbar works!</p>
+<div class="flex flex-row bg-neutral-gray2 rounded-2xl pt-5 pb-5 pr-8 pl-8 gap-7 justify-between ">
+  <div class="flex flex-row items-center gap-10">
+    <div>
+      <button>ثبت آگهی</button>
+    </div>
+    <div>
+      <button>ورود</button>
+    </div>
+  </div>
+<div class="flex flex-row items-center gap-8 ">
+  <div>
+    <button class="hover-text-shadow">اخبار روز</button>
+  </div>
+  <div>
+    <button class="hover-text-shadow">مشاورين املاك</button>
+  </div>
+  <div>
+    <button class="hover-text-shadow">املاك و مستغلات</button>
+  </div>
+  <div>
+    <button class="hover-text-shadow">خرید</button>
+  </div>
+  <div>
+    <button class="hover-text-shadow">اجاره</button>
+  </div>
+  <div class="cursor-pointer">
+    <img src="assets/photos/logo.png"/>
+  </div>
+</div>
+
+</div>
