[#5-ADD] Searchbar component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,6 +20,6 @@
     </h1>
     <h2>آسانی و سرعت در پیدا کردن یک سقف تازه را در سقفینو تجربه کنید</h2>
   </div>
-  <div>این برای سرچ است</div>
+  <app-searchbar></app-searchbar>
 
 </div>
