--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -3,14 +3,15 @@
     <button class="w-full md:w-auto">اجاره</button>
     <button class="w-full md:w-auto">خرید</button>
   </div>
-  <div class="flex flex-row justify-end">
-    <form>
-      <mat-form-field class="w-full max-w-lg" dir="rtl">
-        <input  matInput placeholder="شهر مورد نظر را جست‌وجو کنید" value="">
+  <div>
+    <form class="flex flex-row items-center justify-end">
+      <mat-form-field class="flex-grow" dir="rtl">
+        <input matInput placeholder="شهر مورد نظر را جست‌وجو کنید" value="">
       </mat-form-field>
       <mat-icon>search</mat-icon>
     </form>
   </div>
+
 
 </div>
 
