--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @import "styles/fonts";
+//@import "styles/main";
 
 body {
-  font-family: 'Shabnam', sans-serif;
+  font-family: 'Shabnam', sans-serif !important;
 }
+
+
+
+
 
 
