--- a/src/app/HomeNewUserPage/components/home-new-user/home-new-user.component.html
+++ b/src/app/HomeNewUserPage/components/home-new-user/home-new-user.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-20">
   <app-header></app-header>
-  <div>سقفینو چگونه به شما کمک می کند</div>
+  <app-how-we-help></app-how-we-help>
   <div>دسته بندی</div>
   <div>ویژگی ها</div>
   <div>این بلاگ ما است</div>
