[#7-ADD] category section

--- a/src/app/HomeNewUserPage/components/home-new-user/home-new-user.component.html
+++ b/src/app/HomeNewUserPage/components/home-new-user/home-new-user.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col gap-20">
   <app-header></app-header>
   <app-how-we-help></app-how-we-help>
-  <div>دسته بندی</div>
+  <app-category></app-category>
   <div>ویژگی ها</div>
   <div>این بلاگ ما است</div>
   <div>این یک فوتر است</div>
