--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
 
 <!--</div>-->
 
-<div class="flex flex-col gap-20 p-10 bg-center bg-cover main-div w-full h-full">
+<div class="flex flex-col gap-20 p-10 bg-center bg-cover main-div w-screen h-screen">
   <app-navbar></app-navbar>
   <div class=" inset-0 items-center justify-center text-center text-neutral-gray3 flex flex-col gap-5">
     <h1 class="text-display-2  bottom-20">
@@ -20,6 +20,6 @@
     </h1>
     <h2>آسانی و سرعت در پیدا کردن یک سقف تازه را در سقفینو تجربه کنید</h2>
   </div>
-  <app-searchbar></app-searchbar>
+  <app-searchbar class="mt-64"></app-searchbar>
 
 </div>
