--- a/src/app/HomeNewUserPage/components/how-we-help/how-we-help.component.html
+++ b/src/app/HomeNewUserPage/components/how-we-help/how-we-help.component.html
@@ -1,6 +1,6 @@
 <div class="p-20">
   <div class="flex-row justify-center">
-    <h3>سقفینو چطور به خانه‌دار شدن شما کمک می‌کند</h3>
+    <h3 dir="rtl">سقفینو چطور به خانه‌دار شدن شما کمک می‌کند</h3>
   </div>
   <div class="flex flex-row gap-7 justify-center">
     <app-how-we-help-card buttonText="ثبت آگهی" image="sabt" header="مالک هستید؟" text="آیا می‌دانید میانگین بازدید از وب‌سایت به‌طور متوسط روزانه بالای هزاران نفر است؟ پس به‌سادگی و با چند کلیک ساده، ملک‌تان را به‌صورت رایگان در سقفینو آگهی و در سریع‌ترین زمان ممکن معامله کنید."></app-how-we-help-card>
