[#8-ADD] feature section

--- a/src/app/HomeNewUserPage/components/home-new-user/home-new-user.component.html
+++ b/src/app/HomeNewUserPage/components/home-new-user/home-new-user.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
   <app-how-we-help></app-how-we-help>
   <app-category></app-category>
-  <div>ویژگی ها</div>
+  <app-feature></app-feature>
   <div>این بلاگ ما است</div>
   <div>این یک فوتر است</div>
 </div>
