[#9-FIX] navbar positioning

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row bg-neutral-gray2 rounded-2xl pt-5 pb-5 pr-8 pl-8 gap-7 justify-between ">
+<div class="absolute top-0 left-1/2 translate-y-10 -translate-x-1/2 flex flex-row bg-neutral-gray2 rounded-2xl pt-5 pb-5 pr-8 pl-8 gap-7 justify-between w-10/12">
   <div class="flex flex-row items-center gap-10">
     <div>
       <button>ثبت آگهی</button>
