--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,13 +12,14 @@
 
 <!--</div>-->
 
-<div class="flex flex-col gap-20 p-10 bg-center bg-cover main-div w-screen h-screen">
-  <div class=" inset-0 items-center justify-center text-center text-neutral-gray3 flex flex-col gap-5">
+<div class="flex flex-col gap-28 p-10 bg-center bg-cover main-div w-screen h-screen">
+
+  <div class=" inset-0 items-center justify-center text-center text-neutral-gray3 flex flex-col gap-5 mt-80">
     <h1 class="text-display-2  bottom-20">
       سقفینو؛ سقفی برای همه
     </h1>
     <h2>آسانی و سرعت در پیدا کردن یک سقف تازه را در سقفینو تجربه کنید</h2>
   </div>
-  <app-searchbar class="mt-64"></app-searchbar>
+  <app-searchbar class=""></app-searchbar>
 
 </div>
