--- a/src/app/components/home-page/category/category.component.html
+++ b/src/app/components/home-page/category/category.component.html
@@ -2,7 +2,7 @@
   <div class="">
     <h3 dir="rtl">در سقفینو دنبال چه نوع ملکی هستید</h3>
   </div>
-  <div class="flex flex-row gap-7 justify-center ">
+  <div class="flex flex-row gap-7 justify-between">
     <app-category-card image="tejari" title="تجاری و اداری" houseAmount="23,312"></app-category-card>
     <app-category-card image="villa" title="ویلا" houseAmount="873"></app-category-card>
     <app-category-card image="apartman" title="آپارتمان و برج" houseAmount="15,291"></app-category-card>
