[#12-ADD] blog component

--- a/src/app/components/home-page/home-page-main/home-page-main.component.html
+++ b/src/app/components/home-page/home-page-main/home-page-main.component.html
@@ -3,6 +3,6 @@
   <app-how-we-help></app-how-we-help>
   <app-category></app-category>
   <app-feature></app-feature>
-  <div>این بلاگ ما است</div>
+  <app-blog></app-blog>
   <div>این یک فوتر است</div>
 </div>
