[#12-UPDATE] blog component

--- a/src/app/components/home-page/blog-card/blog-card.component.html
+++ b/src/app/components/home-page/blog-card/blog-card.component.html
@@ -1,7 +1,8 @@
-<div (click)="onClick(title)" class="bg-neutral-gray2 rounded overflow-hidden border-2 border-neutral-gray3 cursor-pointer">
-  <img src="assets/photos/{{image}}.png"/>
+<div (click)="onClick(title)" class="w-60 h-72 bg-neutral-gray2 rounded overflow-hidden border-2 border-neutral-gray3 cursor-pointer">
+  <img class="w-full h-2/3" src="assets/photos/{{image}}.png"/>
   <div class="flex flex-col items-center p-10 pb-5 pt-5">
     <p>{{title}}</p>
   </div>
 
 </div>
+
