--- a/src/app/components/home-page/category/category.component.html
+++ b/src/app/components/home-page/category/category.component.html
@@ -1,8 +1,8 @@
-<div class="p-20 flex flex-col">
+<div class="p-20 flex flex-col w-4/6 m-auto">
   <div>
     <h3 dir="rtl">در سقفینو دنبال چه نوع ملکی هستید</h3>
   </div>
-  <div class="flex flex-row justify-between">
+  <div class="flex flex-row justify-between gap-7">
     <app-category-card image="tejari" title="تجاری و اداری" houseAmount="23,312"></app-category-card>
     <app-category-card image="villa" title="ویلا" houseAmount="873"></app-category-card>
     <app-category-card image="apartman" title="آپارتمان و برج" houseAmount="15,291"></app-category-card>
