[#13-UPDATE] footer section

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,71 +2,95 @@
   <div>
     <h3>سقفینو؛ سقفی ایده‌آل برای زندگی</h3>
   </div>
-  <div class="flex flex-row gap-48 border-b border-neutral-gray5">
-      <div class="flex flex-col gap-2 mb-5">
-        <p>بازارهاى املاك و مستغلات</p>
-        <p>بازار املاك و مستغلات تهران</p>
-        <p>بازار املاك و مستغلات اصفهان</p>
-        <p>بازار املاك و مستغلات شمال</p>
-        <p>مشاهده بیشتر</p>
+  <div class="flex flex-row gap-48 border-b border-neutral-gray5 w-full justify-center">
+      <div class="flex flex-col  mb-5">
+        <p class="text-body-xxs">بازارهاى املاك و مستغلات</p>
+        <p class="text-caption-md">بازار املاك و مستغلات تهران</p>
+        <p class="text-caption-md">بازار املاك و مستغلات اصفهان</p>
+        <p class="text-caption-md">بازار املاك و مستغلات شمال</p>
+        <p class="text-primary-shade3">مشاهده بیشتر</p>
       </div>
-      <div class="flex flex-col gap-2">
-        <p>بيشترين جست وجوها</p>
-        <p>آپارتمان نزديك مترو</p>
-        <p>خانه نزديك بر اصلى خيايان</p>
-        <p>آپارتمان تك واحده</p>
-        <p>مشاهده بیشتر</p>
+      <div class="flex flex-col ">
+        <p class="text-body-xxs">بيشترين جست وجوها</p>
+        <p class="text-caption-md">آپارتمان نزديك مترو</p>
+        <p class="text-caption-md">خانه نزديك بر اصلى خيايان</p>
+        <p class="text-caption-md">آپارتمان تك واحده</p>
+        <p class="text-primary-shade3">مشاهده بیشتر</p>
       </div>
-      <div class="flex flex-col gap-2">
-        <p>پرامتيازترين مشاوران املاك</p>
-        <p>ميترا جبارى</p>
+      <div class="flex flex-col ">
+        <p class="text-body-xxs">پرامتيازترين مشاوران املاك</p>
+        <p class="text-caption-md">ميترا جبارى</p>
         <p>حسام الدين عزيزى</p>
         <p>بهرام مشعوف</p>
-        <p>مشاهده بیشتر</p>
+        <p class="text-primary-shade3">مشاهده بیشتر</p>
       </div>
-      <div class="flex flex-col gap-2">
-        <p>بازارهاى املاك و مستغلات</p>
-        <p>بازار املاك و مستغلات تهران</p>
-        <p>بازار املاك و مستغلات اصفهان</p>
-        <p>بازار املاك و مستغلات شمال</p>
-        <p>مشاهده بیشتر</p>
+      <div class="flex flex-col ">
+        <p class="text-body-xxs">با ما در ارتباط باشید</p>
+        <div class="flex flex-row gap-2">
+          <img class="size-6" src="assets/photos/call.png"/>
+          <p class="text-caption-md">تلفن</p>
+        </div>
+
+        <div class="flex flex-row gap-2">
+          <img class="size-5" src="assets/photos/instagram.png"/>
+          <p class="text-caption-md">اینستاگرام</p>
+        </div>
+
+        <div class="flex flex-row gap-2">
+          <img class="size-6" src="assets/photos/telegram.png"/>
+          <p class="text-caption-md">تلگرام</p>
+        </div>
+
       </div>
   </div>
-  <div class="flex flex-row gap-48">
-    <div class="flex flex-col gap-2 mb-5">
-      <p>بازارهاى املاك و مستغلات</p>
-      <p>بازار املاك و مستغلات تهران</p>
-      <p>بازار املاك و مستغلات اصفهان</p>
-      <p>بازار املاك و مستغلات شمال</p>
-      <p>مشاهده بیشتر</p>
+  <div class="flex flex-row gap-48 w-full justify-center">
+    <div class="flex flex-col gap-2 mb-5 h-32">
+      <img class="w-2/3 " src="assets/photos/logo.png"/>
+      <p class="text-body-xs">تجربه لذت خانهدار شدن سريع وآسان</p>
+      <p class="text-caption-md">سقفينو پلى است تابه سرعت در بين هزاران
+        <br>
+        آكهى ثبت شده جست وجو كنيد.
+<br>
+      ملك مورد نظر را پيدا كتيد وبراى انجام معاملهاى
+        <br>
+        مطمئن، با مشاورين املاى معتمد ومتخصص
+        <br>
+        شهرتان در ارتباط باشيد.</p>
+
     </div>
-    <div class="flex flex-col gap-2">
-      <p>بيشترين جست وجوها</p>
-      <p>آپارتمان نزديك مترو</p>
-      <p>خانه نزديك بر اصلى خيايان</p>
-      <p>آپارتمان تك واحده</p>
-      <p>مشاهده بیشتر</p>
+    <div class="flex flex-col">
+      <p class="text-caption-lg">خدمات</p>
+      <p class="text-caption-md">اجارە</p>
+      <p class="text-caption-md">خرید</p>
+      <p class="text-caption-md">ثبت رايكان آكهى ملك</p>
+      <p class="text-caption-md">املاك ومستغلات</p>
+      <p class="text-caption-md">مشاورين املاک</p>
+      <p class="text-caption-md">اخبار روز املاك</p>
+      <p class="text-caption-md">سوال ملكى داريد؟</p>
     </div>
-    <div class="flex flex-col gap-2">
-      <p>پرامتيازترين مشاوران املاك</p>
-      <p>ميترا جبارى</p>
-      <p>حسام الدين عزيزى</p>
-      <p>بهرام مشعوف</p>
-      <p>مشاهده بیشتر</p>
+    <div class="flex flex-col">
+      <p class="text-caption-lg">اطلاعات</p>
+      <p class="text-caption-md">داتلود اپليكشن سقفينو</p>
+      <p class="text-caption-md">تماس باما</p>
+      <p class="text-caption-md">داستان سقفينو</p>
+      <p class="text-caption-md">پرسش هاى پرتكرار</p>
+      <p class="text-caption-md">يك سقف: بلاك سقفينو</p>
+      <p class="text-caption-md">حريم شخصى شما</p>
+      <p class="text-caption-md">تعهدات ما وشما</p>
+
     </div>
-    <div class="flex flex-col gap-2">
-      <p>بازارهاى املاك و مستغلات</p>
-      <p>بازار املاك و مستغلات تهران</p>
-      <p>بازار املاك و مستغلات اصفهان</p>
-      <p>بازار املاك و مستغلات شمال</p>
-      <p>مشاهده بیشتر</p>
+    <div class="flex flex-col">
+      <p class="text-caption-lg">حساب كاربرى</p>
+      <p class="text-caption-md">پروقايل من</p>
+      <p class="text-caption-md">ملك هاى نشان شده</p>
+      <p class="text-caption-md">آكهى هاى من</p>
     </div>
   </div>
   <div>
     <img src="assets/photos/footer.png"/>
   </div>
 </div>
-<div>
+<div class="flex justify-center bg-neutral-gray3 pt-6 p-3">
   <p>حقوق این سایت متعلق به سقفینو است</p>
 </div>
 
