[#14-FIX] howWeHelp sizing

--- a/src/app/components/home-page/blog/blog.component.html
+++ b/src/app/components/home-page/blog/blog.component.html
@@ -1,4 +1,4 @@
-<div class="p-20 flex flex-col w-4/6 m-auto" dir="rtl">
+<div class="p-20 flex flex-col w-full m-auto" dir="rtl">
   <div>
     <h3>آخرین اخبار املاک را از سقفینو دنبال کنید</h3>
   </div>
