--- a/src/app/components/home-page/category/category.component.html
+++ b/src/app/components/home-page/category/category.component.html
@@ -1,4 +1,4 @@
-<div class="p-20 flex flex-col w-4/6 m-auto">
+<div class="p-20 flex flex-col w-full m-auto">
   <div>
     <h3 dir="rtl">در سقفینو دنبال چه نوع ملکی هستید</h3>
   </div>
