--- a/src/app/components/home-page/how-we-help/how-we-help.component.html
+++ b/src/app/components/home-page/how-we-help/how-we-help.component.html
@@ -1,4 +1,4 @@
-<div class="p-20">
+<div class="p-20 w-full">
   <div class="flex-row justify-center">
     <h3 dir="rtl">سقفینو چطور به خانه‌دار شدن شما کمک می‌کند</h3>
   </div>
