[#15-FIX] searchBar icon

--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -7,8 +7,9 @@
     <form class="flex flex-row items-center justify-end">
       <mat-form-field class="flex-grow" dir="rtl">
         <input matInput placeholder="شهر مورد نظر را جست‌وجو کنید" value="">
+        <mat-icon matPrefix>search</mat-icon>
       </mat-form-field>
-      <mat-icon>search</mat-icon>
+
     </form>
   </div>
 
