[#18-FIX] styles bug

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,5 +1,5 @@
-//@use 'sass-rem' as to;
-@import "node_modules/sass-rem/rem";
+@use 'sass-rem' as to;
+//@import "node_modules/sass-rem/rem";
 
 $scale: 1;
 $mobile-scale: 0.75;
@@ -33,38 +33,38 @@ h6 {
   font-style: normal;
   margin: 0 !important;
   padding: 0 !important;
-  color: var(--neutral-black);
+  
 }
 h2 {
-  font-size: rem($h2-font-size) !important;
+  font-size: to.rem($h2-font-size) !important;
   font-weight: 800 !important;
   line-height: $h2-line-height !important;
   letter-spacing: 0 !important;
 }
 
 h3 {
-  font-size: rem($h3-font-size) !important;
+  font-size: to.rem($h3-font-size) !important;
   font-weight: 800 !important;
   line-height: $h3-line-height !important;
   letter-spacing: 0 !important;
 }
 
 h4 {
-  font-size: rem($h4-font-size) !important;
+  font-size: to.rem($h4-font-size) !important;
   font-weight: 700 !important;
   line-height: $h4-line-height !important;
   letter-spacing: 0 !important;
 }
 
 h5 {
-  font-size: rem($h5-font-size) !important;
+  font-size: to.rem($h5-font-size) !important;
   font-weight: 700 !important;
   line-height: $h5-line-height !important;
   letter-spacing: 0 !important;
 }
 
 h6 {
-  font-size: rem($h6-font-size) !important;
+  font-size: to.rem($h6-font-size) !important;
   font-weight: 700 !important;
   line-height: $h6-line-height !important;
   letter-spacing: 0 !important;
@@ -199,64 +199,64 @@ h6 {
 
 @media (max-width: 768px) {
   h1 {
-    font-size: rem($h1-font-size * $tablet-scale);
-    line-height: rem($h1-line-height * $tablet-scale);
+    font-size: to.rem($h1-font-size * $tablet-scale);
+    line-height: to.rem($h1-line-height * $tablet-scale);
   }
 
   h2 {
-    font-size: rem($h2-font-size * $tablet-scale);
-    line-height: rem($h2-line-height * $tablet-scale);
+    font-size: to.rem($h2-font-size * $tablet-scale);
+    line-height: to.rem($h2-line-height * $tablet-scale);
   }
 
   h3 {
-    font-size: rem($h3-font-size * $tablet-scale);
-    line-height: rem($h3-line-height * $tablet-scale);
+    font-size: to.rem($h3-font-size * $tablet-scale);
+    line-height: to.rem($h3-line-height * $tablet-scale);
   }
 
   h4 {
-    font-size: rem($h4-font-size * $tablet-scale);
-    line-height: rem($h4-line-height * $tablet-scale);
+    font-size: to.rem($h4-font-size * $tablet-scale);
+    line-height: to.rem($h4-line-height * $tablet-scale);
   }
 
   h5 {
-    font-size: rem($h5-font-size * $tablet-scale);
-    line-height: rem($h5-line-height * $tablet-scale);
+    font-size: to.rem($h5-font-size * $tablet-scale);
+    line-height: to.rem($h5-line-height * $tablet-scale);
   }
 
   h6 {
-    font-size: rem($h6-font-size * $tablet-scale);
-    line-height: rem($h6-line-height * $tablet-scale);
+    font-size: to.rem($h6-font-size * $tablet-scale);
+    line-height: to.rem($h6-line-height * $tablet-scale);
   }
 }
 
 @media (max-width: 640px) {
   h1 {
-    font-size: rem($h1-font-size * $mobile-scale);
-    line-height: rem($h1-line-height * $mobile-scale);
+    font-size: to.rem($h1-font-size * $mobile-scale);
+    line-height: to.rem($h1-line-height * $mobile-scale);
   }
 
   h2 {
-    font-size: rem($h2-font-size * $mobile-scale);
-    line-height: rem($h2-line-height * $mobile-scale);
+    font-size: to.rem($h2-font-size * $mobile-scale);
+    line-height: to.rem($h2-line-height * $mobile-scale);
   }
 
   h3 {
-    font-size: rem($h3-font-size * $mobile-scale);
-    line-height: rem($h3-line-height * $mobile-scale);
+    font-size: to.rem($h3-font-size * $mobile-scale);
+    line-height: to.rem($h3-line-height * $mobile-scale);
   }
 
   h4 {
-    font-size: rem($h4-font-size * $mobile-scale);
-    line-height: rem($h4-line-height * $mobile-scale);
+    font-size: to.rem($h4-font-size * $mobile-scale);
+    line-height: to.rem($h4-line-height * $mobile-scale);
   }
 
   h5 {
-    font-size: rem($h5-font-size * $mobile-scale);
-    line-height: rem($h5-line-height * $mobile-scale);
+    font-size: to.rem($h5-font-size * $mobile-scale);
+    line-height: to.rem($h5-line-height * $mobile-scale);
   }
 
   h6 {
-    font-size: rem($h6-font-size * $mobile-scale);
-    line-height: rem($h6-line-height * $mobile-scale);
+    font-size: to.rem($h6-font-size * $mobile-scale);
+    line-height: to.rem($h6-line-height * $mobile-scale);
   }
 }
