--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 @import "styles/fonts";
-//@import "styles/main";
+@import "styles/main";
 
 body {
   font-family: 'Shabnam', sans-serif !important;
