[#20-FIX] headers spacing

--- a/src/app/components/home-page/category/category.component.html
+++ b/src/app/components/home-page/category/category.component.html
@@ -1,5 +1,5 @@
 <div class="p-20 flex flex-col w-full m-auto">
-  <div>
+  <div class="mb-10">
     <h3 dir="rtl">در سقفینو دنبال چه نوع ملکی هستید</h3>
   </div>
   <div class="flex flex-row justify-between gap-7">
