--- a/src/app/components/home-page/blog/blog.component.html
+++ b/src/app/components/home-page/blog/blog.component.html
@@ -1,6 +1,6 @@
 <div class="p-20 flex flex-col w-full m-auto" dir="rtl">
-  <div>
-    <h3>آخرین اخبار املاک را از سقفینو دنبال کنید</h3>
+  <div class="mb-10">
+    <h3 >آخرین اخبار املاک را از سقفینو دنبال کنید</h3>
   </div>
   <div class="flex flex-row gap-7 justify-between">
     <app-blog-card title="رکود بازار مسکن فروشندگان در انتظار خریداران..." image="blog1"></app-blog-card>
