--- a/src/app/components/home-page/how-we-help/how-we-help.component.html
+++ b/src/app/components/home-page/how-we-help/how-we-help.component.html
@@ -1,5 +1,5 @@
 <div class="p-20 w-full">
-  <div class="flex-row justify-center">
+  <div class="flex-row justify-center mb-10 mt-10">
     <h3 dir="rtl">سقفینو چطور به خانه‌دار شدن شما کمک می‌کند</h3>
   </div>
   <div class="flex flex-row gap-7 justify-between">
