[#21-ADD] top real estate section

--- a/src/app/components/search-page/search-page-main/search-page-main.component.html
+++ b/src/app/components/search-page/search-page-main/search-page-main.component.html
@@ -1,4 +1,5 @@
 <app-houses></app-houses>
 <app-call-to-action></app-call-to-action>
 <app-search-recommendation></app-search-recommendation>
+<app-top-real-estate></app-top-real-estate>
 
