--- a/src/app/components/search-page/search-page-main/search-page-main.component.html
+++ b/src/app/components/search-page/search-page-main/search-page-main.component.html
@@ -2,4 +2,5 @@
 <app-call-to-action></app-call-to-action>
 <app-search-recommendation></app-search-recommendation>
 <app-top-real-estate></app-top-real-estate>
+<app-top-consultant></app-top-consultant>
 
