[#22-ADD] house model & data

--- a/src/app/components/search-page/houses/houses.component.html
+++ b/src/app/components/search-page/houses/houses.component.html
@@ -4,13 +4,13 @@
     <button class="text-neutral-gray9">مشاهده همه</button>
   </div>
   <div class="grid grid-cols-4 grid-rows-2 gap-5">
-    <app-houses-card image="house1" hoursPosted="2" area="80" address="رشت، گلسار، خیابان ۹۸" rahnPrice="500" ejarePrice="10"></app-houses-card>
-    <app-houses-card image="house1" hoursPosted="2" area="80" address="رشت، گلسار، خیابان ۹۸" rahnPrice="500" ejarePrice="10"></app-houses-card>
-    <app-houses-card image="house1" hoursPosted="2" area="80" address="رشت، گلسار، خیابان ۹۸" rahnPrice="500" ejarePrice="10"></app-houses-card>
-    <app-houses-card image="house1" hoursPosted="2" area="80" address="رشت، گلسار، خیابان ۹۸" rahnPrice="500" ejarePrice="10"></app-houses-card>
-    <app-houses-card image="house1" hoursPosted="2" area="80" address="رشت، گلسار، خیابان ۹۸" rahnPrice="500" ejarePrice="10"></app-houses-card>
-    <app-houses-card image="house1" hoursPosted="2" area="80" address="رشت، گلسار، خیابان ۹۸" rahnPrice="500" ejarePrice="10"></app-houses-card>
-    <app-houses-card image="house1" hoursPosted="2" area="80" address="رشت، گلسار، خیابان ۹۸" rahnPrice="500" ejarePrice="10"></app-houses-card>
-    <app-houses-card image="house1" hoursPosted="2" area="80" address="رشت، گلسار، خیابان ۹۸" rahnPrice="500" ejarePrice="10"></app-houses-card>
+    <app-houses-card [housesCardInputModel]="housesData[0]"></app-houses-card>
+    <app-houses-card [housesCardInputModel]="housesData[0]"></app-houses-card>
+    <app-houses-card [housesCardInputModel]="housesData[0]"></app-houses-card>
+    <app-houses-card [housesCardInputModel]="housesData[0]"></app-houses-card>
+    <app-houses-card [housesCardInputModel]="housesData[0]"></app-houses-card>
+    <app-houses-card [housesCardInputModel]="housesData[0]"></app-houses-card>
+    <app-houses-card [housesCardInputModel]="housesData[0]"></app-houses-card>
+    <app-houses-card [housesCardInputModel]="housesData[0]"></app-houses-card>
   </div>
 </div>
