--- a/src/app/components/search-page/houses-card/houses-card.component.html
+++ b/src/app/components/search-page/houses-card/houses-card.component.html
@@ -1,16 +1,16 @@
 <div class="relative w-80 bg-white rounded-2xl overflow-hidden border border-neutral-gray4 h-96" dir="rtl">
   <div class="absolute left-5 top-5 bg-neutral-gray9 rounded pt-3 pr-2 pl-2">
-    <p class="text-body-xs text-white"> {{hoursPosted}} ساعت پیش</p>
+    <p class="text-body-xs text-white"> {{housesCardInputModel.hoursPosted}} ساعت پیش</p>
   </div>
-  <img class="w-full h-1/2 cursor-pointer" src="assets/photos/{{image}}.png"/>
+  <img class="w-full h-1/2 cursor-pointer" src="assets/photos/{{housesCardInputModel.image}}.png"/>
   <div class="p-5 flex flex-row justify-between justify-items-center ">
     <p class="text-neutral-gray8 text-body-xs">رهن و اجاره آپارتمان تهران</p>
     <mat-icon class="cursor-pointer">add_box</mat-icon>
   </div>
   <div class="pr-5 pl-5 text-neutral-gray10 cursor-pointer">
-    <p class="text-body-xs">{{area}}  متر، {{address}}</p>
-    <h6 >{{rahnPrice}} میلیون تومان رهن</h6>
-    <h6 >{{ejarePrice}} میلیون تومان اجاره</h6>
+    <p class="text-body-xs">{{housesCardInputModel.area}}  متر، {{housesCardInputModel.address}}</p>
+    <h6 >{{housesCardInputModel.rahnPrice}} میلیون تومان رهن</h6>
+    <h6 >{{housesCardInputModel.ejarePrice}} میلیون تومان اجاره</h6>
   </div>
 
 </div>
