--- a/src/app/components/search-page/top-real-estate/top-real-estate.component.html
+++ b/src/app/components/search-page/top-real-estate/top-real-estate.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-5 p-20" dir="rtl">
   <div>
-    <h3>املاک برتر تهران</h3>
+    <h3>املاک برتر {{user$ | async}}</h3>
   </div>
   <div class="flex gap-10">
     <app-top-real-estate-card image="toosi" name="مشاور املاک توسی" location="تهران، نیاوران" score="۴/۸" activeAds="۵۵۰۰" reviewNum="۱۸"></app-top-real-estate-card>
