[#28-ADD] getCityNameById function in service

--- a/src/app/components/search-page/houses/houses.component.html
+++ b/src/app/components/search-page/houses/houses.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col p-20 gap-8" dir="rtl">
   <div class="flex flex-row justify-between">
-    <h3>جدید ترین خانه های اجاره ای {{user$ | async}}</h3>
+    <h3>جدید ترین خانه های اجاره ای {{cityName}}</h3>
     <button class="text-neutral-gray9">مشاهده همه</button>
   </div>
   <div class="grid grid-cols-4 grid-rows-2 gap-5">
