--- a/src/app/components/search-page/search-page-main/search-page-main.component.html
+++ b/src/app/components/search-page/search-page-main/search-page-main.component.html
@@ -1,6 +1,6 @@
-<app-houses [housesData]="housesData"></app-houses>
+<app-houses [housesData]="housesData" [cityName]="cityName"></app-houses>
 <app-call-to-action></app-call-to-action>
 <app-search-recommendation></app-search-recommendation>
-<app-top-real-estate></app-top-real-estate>
-<app-top-consultant></app-top-consultant>
+<app-top-real-estate [cityName]="cityName"></app-top-real-estate>
+<app-top-consultant [cityName]="cityName"></app-top-consultant>
 
