--- a/src/app/components/search-page/top-consultant/top-consultant.component.html
+++ b/src/app/components/search-page/top-consultant/top-consultant.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-5 p-20" dir="rtl">
   <div>
-    <h3>مشاورین برتر {{user$ | async}}</h3>
+    <h3>مشاورین برتر {{cityName}}</h3>
   </div>
   <div class="flex gap-10">
     <app-top-consultant-card image="aliz" name="علی ذوقی" realEstateName="املاک لولمان" score="۵"></app-top-consultant-card>
