--- a/src/app/components/show-more-page/show-more-page-main/show-more-page-main.component.html
+++ b/src/app/components/show-more-page/show-more-page-main/show-more-page-main.component.html
@@ -1,10 +1,11 @@
 
-<div class=" mt-52 p-20" dir="rtl">
+<div class="flex flex-col gap-10 mt-52 p-20" dir="rtl">
   <div class="flex gap-20 justify-items-center">
     <app-page-filter></app-page-filter>
     <app-show-more-searchbar></app-show-more-searchbar>
   </div>
-  <div class="flex">
-    
+  <div class="flex gap-20 justify-between">
+    <app-show-more-houses></app-show-more-houses>
+    <app-map></app-map>
   </div>
 </div>
