--- a/src/app/components/show-more-page/show-more-page-main/show-more-page-main.component.html
+++ b/src/app/components/show-more-page/show-more-page-main/show-more-page-main.component.html
@@ -5,7 +5,7 @@
     <app-show-more-searchbar></app-show-more-searchbar>
   </div>
   <div class="flex gap-20 justify-between">
-    <app-show-more-houses></app-show-more-houses>
+    <app-show-more-houses [housesData]="housesData"></app-show-more-houses>
     <app-map></app-map>
   </div>
 </div>
