[#30-ADD] photo gallery section

--- a/src/app/components/search-page/houses-card/houses-card.component.html
+++ b/src/app/components/search-page/houses-card/houses-card.component.html
@@ -4,7 +4,7 @@
   </div>
   <img (click)="onHouseCardClick(housesCardInputModel.houseId)" class="w-full h-1/2 cursor-pointer" src="assets/photos/{{housesCardInputModel.image}}.png"/>
   <div class="p-5 flex flex-row justify-between justify-items-center ">
-    <p class="text-neutral-gray8 text-body-xs">رهن و اجاره آپارتمان تهران</p>
+    <p class="text-neutral-gray8 text-body-xs">رهن و اجاره آپارتمان {{cityName}}</p>
     <mat-icon class="cursor-pointer">add_box</mat-icon>
   </div>
   <div class="pr-5 pl-5 text-neutral-gray10 cursor-pointer">
