--- a/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
+++ b/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
@@ -1,3 +1,14 @@
-<div class="p-20 mt-52">
-  <p>ts</p>
+<div class="p-20 mt-52" dir="rtl">
+  <div class="flex gap-2 justify-center">
+    <div>
+      <img src="assets/photos/card-details5.png" class="w-full h-auto" />
+    </div>
+    <div class="grid grid-cols-2 gap-2">
+      <img src="assets/photos/card-details1.png" class="w-full h-auto" />
+      <img src="assets/photos/card-details2.png" class="w-full h-auto" />
+      <img src="assets/photos/card-details3.png" class="w-full h-auto" />
+      <img src="assets/photos/card-details4.png" class="w-full h-auto" />
+    </div>
+  </div>
+
 </div>
