--- a/src/app/components/search-page/houses/houses.component.html
+++ b/src/app/components/search-page/houses/houses.component.html
@@ -4,6 +4,6 @@
     <button (click)="onSeeMoreClick()" class="text-neutral-gray9">مشاهده همه</button>
   </div>
   <div class="grid grid-cols-4 grid-rows-2 gap-5">
-    <app-houses-card *ngFor="let house of housesData" [housesCardInputModel]="house"></app-houses-card>
+    <app-houses-card [cityName]="cityName" *ngFor="let house of housesData" [housesCardInputModel]="house"></app-houses-card>
   </div>
 </div>
