[#30-ADD] feature section

--- a/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
+++ b/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
@@ -61,9 +61,22 @@
 
           </div>
         </div>
+        <div class="flex flex-col gap-3 mt-6">
+          <h4>امکانات</h4>
+          <div class="grid grid-cols-2">
+            <p class="text-body-xs text-neutral-gray11">پارکینگ: ۱</p>
+            <p class="text-body-xs text-neutral-gray11">سرويس بهداشتى: ٢</p>
+            <p class="text-body-xs text-neutral-gray11">انبارى: ۱</p>
+            <p class="text-body-xs text-neutral-gray11">نوع سرويس بهداشتى: فرنكى</p>
+            <p class="text-body-xs text-neutral-gray11">آسانسور: ٢</p>
+            <p class="text-body-xs text-neutral-gray11">سيستم سرمايش: چيلر</p>
+            <p class="text-body-xs text-neutral-gray11">جنس كف: سراميك</p>
+            <p class="text-body-xs text-neutral-gray11">سيستم كرمايش: نوساز</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="w-1/2">this is the realestate card</div>
+    <div class="w-1/2">this is the real estate card</div>
 
   </div>
 </div>
