--- a/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
+++ b/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
@@ -74,6 +74,17 @@
             <p class="text-body-xs text-neutral-gray11">سيستم كرمايش: نوساز</p>
           </div>
         </div>
+        <div class="flex flex-col gap-3 mt-6">
+          <h4>توضیحات</h4>
+          <div class="flex flex-col">
+            <p class="text-body-xs text-neutral-gray11">سن بنا: نوساز</p>
+            <p class="text-body-xs text-neutral-gray11">موقعيت جغرافيايى بنا: شمالى</p>
+            <p class="text-body-xs text-neutral-gray11">نوع سند: شخصى</p>
+            <p class="text-body-xs text-neutral-gray11">امكانات امنيتى: آيفون تصويرى، درب ضدسرقت</p>
+            <p class="text-body-xs text-neutral-gray11">ساير امكانات: كمد ديورى، ينجره ها UPVC</p>
+            <p class="text-body-xs text-neutral-gray11">زمان بازيد ٧ صبح تا ١١ شب</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="w-1/2">this is the real estate card</div>
