[#30-ADD] location section

--- a/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
+++ b/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
@@ -85,6 +85,29 @@
             <p class="text-body-xs text-neutral-gray11">زمان بازيد ٧ صبح تا ١١ شب</p>
           </div>
         </div>
+        <div class="flex flex-col gap-3 mt-6">
+          <h4>موقعیت</h4>
+          <div class="bg-neutral-gray5 p-20">نقشه بارگزاری نشد!</div>
+          <div class="flex justify-between mt-10">
+            <div>
+              <p class="text-body-xxs"> زمان ثبت آگهی:
+                {{house.hoursPosted}} ساعت پیش</p>
+            </div>
+            <div class="border-r pr-5">
+              <p class="text-body-xxs"> تعداد مشاهده این آگهی: ۲۳</p>
+            </div>
+            <div class="border-r pr-5">
+              <p class="text-body-xxs">تعداد ذخیره این آگهی: ۱۰</p>
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-between w-1/2">
+          <p class="text-body-xs">بازخورد شما درباره این آگهی چیست؟</p>
+          <div class="flex gap-5">
+            <mat-icon class="cursor-pointer">thumb_down</mat-icon>
+            <mat-icon class="cursor-pointer">thumb_up</mat-icon>
+          </div>
+        </div>
       </div>
     </div>
     <div class="w-1/2">this is the real estate card</div>
