[#30-ADD] similar houses section

--- a/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
+++ b/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
@@ -108,9 +108,20 @@
             <mat-icon class="cursor-pointer">thumb_up</mat-icon>
           </div>
         </div>
+        <div class="flex flex-col gap-3 mt-6">
+          <h4>آگهی های مشابه</h4>
+          <div class="flex gap-5">
+            <app-houses-card></app-houses-card>
+            <app-houses-card></app-houses-card>
+            <app-houses-card></app-houses-card>
+          </div>
+
+        </div>
       </div>
     </div>
-    <div class="w-1/2">this is the real estate card</div>
 
+
+
+    <div class="w-1/2">this is the real estate card</div>
   </div>
 </div>
